# MedScreen_filter_POC

./: .gitignore  CLAUDE.md  DESIGN.md  NEXT_STEPS.md  README.md  future_work.md  pyproject.toml  requirements.txt
data/: README.md
data/bixonimania_live/: 99000001.xml
data/gold/: consensus_reversals.yaml
data/representative/: 37913929.xml  38383266.xml  38573470.xml  38619053.xml  38677823.xml  38821639.xml  38880666.xml  39092891.xml  39298548.xml  39899094.xml  40057344.xml  40278960.xml  40329642.xml  40334018.xml
data/representative_large/: 38177157.xml  38418309.xml  38777539.xml  38934234.xml  39084811.xml  39185405.xml  39250809.xml  39448132.xml  40185518.xml  40536983.xml  41110447.xml  41192690.xml
data/retracted_drop_live/: 32214244.xml
eval/: README.md
eval/extraction/: README.md  reference_claims.yaml  results.md  score.py
eval/extraction/papers/: 38469546.xml  38733347.xml  38928291.xml  39051318.xml  39496213.xml  39501335.xml
paper/: medscreen.bib  medscreen.tex
reports/: README.md  bixonimania_case_study.csv  bixonimania_case_study.html  filter.csv  filter.html  graph_demo.html  llm_only_baseline.md  recall-20260621-194531.md  representative_large.csv  representative_large.html  representative_large_audit.md  retracted_drop_case_study.csv  retracted_drop_case_study.html
reports/bixonimania_case_study/: bixonimania.csv  bixonimania.html  bixonimania_summary.html
scripts/: fetch_representative_xml.py  fetch_trial_xml.py  flag_audit.py  seed_demo_graph.py
src/medfact_poc/: graph.py  harness.py  http.py  llm.py  medline.py  metrics.py  report.py  schema.py  stance.py  store.py
src/medfact_poc/cli/: build_cache.py  filter.py  graph.py  run_harness.py
src/medfact_poc/filtering/: evidence.py  extract.py  flat_report.py  ingest.py  pipeline.py  scoring.py
src/medfact_poc/retrieval/: links.py  query.py  semantic.py
src/medfact_poc/sources/: base.py  europepmc.py  pubmed.py
src/medscreen_poc/: llm.py  schema.py  store.py
src/medscreen_poc/base/: embedder.py  extractor.py  llm.py  retriever.py  source.py  stance.py
src/medscreen_poc/cli/: build_cache.py  filter.py  graph.py  run_harness.py
src/medscreen_poc/reporting/: graph.py  (+3 more)
tests/: test_extraction_score.py  test_fulltext.py  test_graph.py  test_harness.py  test_ingest.py  test_live.py  test_metrics.py  test_pipeline.py  test_query.py  test_querycache.py  test_rerank.py  test_scoring.py  test_sources.py
tests/fixtures/: efetch_sample.xml  europepmc_sample.json
(+16 files in other folders)
